# hack4oer2018_lehrplaene

./: README.md  convert_json_for_translate.py  nnlm_eval.py  nnlm_extract.py  nnlm_train.py  pdf_to_text.py  spacy_example.py  tf_idf_example.py  tf_idf_svm_eval.py  tf_idf_svm_train.py
pdf_renderer/: .gitignore  CMakeLists.txt  create_thumbnails.cpp  extract_info.cpp  pdf_python.cpp  pdf_python.h  pdf_python_test.cpp  pdf_renderer.cpp  pdf_renderer.h  pdf_wrapper.cpp  pdf_wrapper.h  setup.py  test.py
